# Ayurgenomics

./: Dockerfile  README.md  REVIEW_PACKET.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
crispr_rl/: __init__.py  api.py  features.py  rl_agent.py
crispr_rl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
crispr_rl/ayur_layer/: __init__.py  ayur_map.json  mapping.py  weights.py
frontend/: index.html
logs/: requests.jsonl
scripts/: visualize_scores.py
tests/: test_ayur.py  test_features.py  test_rl.py
