[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crispr-rl"
version = "4.0.0"
description = "Ayurgenomic CRISPR Intelligence Engine — RL-based gRNA optimisation guided by Ayurvedic bioethical heuristics"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Rutuja", email = "rutuja@crispr-rl.bio" }]
requires-python = ">=3.10"
keywords = ["CRISPR", "gRNA", "reinforcement-learning", "Ayurveda", "genomics", "bioinformatics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]
viz = [
    "matplotlib>=3.9.0",
    "numpy>=1.26.0",
]
all = ["crispr-rl[dev,viz]"]

[project.scripts]
crispr-rl-serve = "crispr_rl.api:app"
crispr-rl-visualize = "scripts.visualize_scores:main"

[project.urls]
Repository = "https://github.com/rutuja/crispr-rl-v4"
Documentation = "https://github.com/rutuja/crispr-rl-v4#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["crispr_rl*"]

[tool.setuptools.package-data]
"crispr_rl.ayur_layer" = ["ayur_map.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
log_cli = true
log_cli_level = "INFO"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]
